--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index.html
@@ -10,5 +10,13 @@
     <br><br>
 
     <p>Atualmente não fiz amizade com ninguém da tribo, porém já conversei com algumas pessoas, incluindo professores, no intuito de sanar dúvidas !</p>
+
+    <br><br>
+
+    <img src="https://www.google.com/imgres?imgurl=https%3A%2F%2Fimg.freepik.com%2Fvetores-premium%2Fvetor-de-personagem-de-estudante-pessoas-com-livros-e-mochilas_507816-667.jpg%3Fw%3D2000&imgrefurl=https%3A%2F%2Fbr.freepik.com%2Fvetores%2Festudante&tbnid=vqSR3fp7OPfs9M&vet=12ahUKEwiu-o61is38AhW-u5UCHXuPDg8QMygMegUIARD8AQ..i&docid=rExp3ntQLVuSmM&w=2000&h=1129&q=imagem%20de%20estudantes&ved=2ahUKEwiu-o61is38AhW-u5UCHXuPDg8QMygMegUIARD8AQ" alt="Alunos desenho" width="300">
+
+    <br><br>
+
+    <img src="Alunos estudando.jpeg" alt="Alunos estudando" width="300">
 </body>
 </html>
