--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index2.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index2.html
@@ -10,19 +10,31 @@
     <br><br>
 
     <ul>
-    <li>Adilson</li>
-    <li>Vinicius</li>
-    <li>Erickson</li>
-    <li>Wilson</li>
-    <li>Juliana</li>
+    <li><a href="#Adilson">Adilson</a></li>
+    <li><a href="#Vinicius">Vinicius</a></li>
+    <li><a href="#Erickson">Erickson</a></li>
+    <li><a href="#Wilson">Wilson</a></li>
+    <li><a href="#Juliana">Juliana</a></li>
     </ul>
 
     <br><br>
 
-    <p>Há vagas para gente de luz e bem humorada na minha vida, mas uma delas é sua para sempre!</p>
-    <p>Pessoas especiais aparecem na nossa vida quando menos esperamos, estão ao nosso lado quando mais precisamos e ficam para sempre por se tornarem parte de nós</p>
-    <p>Os bons momentos existem para que pessoas especiais sejam eternas em nossos corações.</p>
-    <p>Sou muito grata por ter você na minha vida. Minha caminhada se tornou mais especial porque tenho você ao meu lado!</p>
-    <p>Nosso encontro foi escrito antes de nascermos. Somos almas gêmeas, amigos verdadeiros, o complemento um do outro.</p>
+    <p id="Adilson">Há vagas para gente de luz e bem humorada na minha vida, mas uma delas é sua para sempre!</p>
+
+    <br><br>
+
+    <p id="Vinicius">Pessoas especiais aparecem na nossa vida quando menos esperamos, estão ao nosso lado quando mais precisamos e ficam para sempre por se tornarem parte de nós</p>
+
+    <br><br>
+
+    <p id="Erickson">Os bons momentos existem para que pessoas especiais sejam eternas em nossos corações.</p>
+
+    <br><br>
+
+    <p id="Wilson">Sou muito grata por ter você na minha vida. Minha caminhada se tornou mais especial porque tenho você ao meu lado!</p>
+
+    <br><br>
+
+    <p id="Juliana">Nosso encontro foi escrito antes de nascermos. Somos almas gêmeas, amigos verdadeiros, o complemento um do outro.</p>
 </body>
 </html>
