--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index2.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-1-HTML-CSS-estruturas-página/index2.html
@@ -36,5 +36,9 @@
     <br><br>
 
     <p id="Juliana">Nosso encontro foi escrito antes de nascermos. Somos almas gêmeas, amigos verdadeiros, o complemento um do outro.</p>
+
+    <br><br>
+
+    <a href="https://www.frasesdobem.com.br/frases-para-pessoas-especiais" target="_blank">Frases para amigos</a>
 </body>
 </html>
