--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-2-HTML-CSS-primeiros-passos-css/index2.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-2-HTML-CSS-primeiros-passos-css/index2.html
@@ -8,6 +8,40 @@
         
         h1{
             font-family: sans-serif;
+            font-size: 4em;
+            font-style: oblique;
+            line-height: 40px;
+            text-align: center;
+            text-decoration: underline;
+        }
+
+        p{
+            font-weight: 600;
+            font-size: 3em;
+            line-height: 40px;
+            text-align: left;
+            text-decoration: solid;
+        }
+
+        body{
+            font-size: 16px;
+        }
+
+        ul{
+            text-align: left;
+            font-size: 2em;
+        }
+
+        #amarelo{
+            background-color: yellow;
+        }
+
+        #vermelho{
+            background-color: red;
+        }
+
+        #marrom{
+            background-color: brown;
         }
 
     </style>
@@ -20,9 +54,9 @@
     <p>Qual é a sua cor favorita?</p>
 
     <ul>
-      <li>Amarelo</li>
-      <li>Vermelho</li>
-      <li>Marrom</li>
+      <li id="amarelo">Amarelo</li>
+      <li id="vermelho">Vermelho</li>
+      <li id="marrom">Marrom</li>
     </ul>
 
   </body>
