estilização da primeira lista

--- a/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/index3.html
+++ b/fundamentos/secao-02-introducao-a-html-e-css/dia-3-HTML-CSS-avançado/index3.html
@@ -10,15 +10,21 @@
 
     <h1>Lista dos Melhores Sites que já vi</h1>
 
+    <p>Top 3 dos melhores sites que existem na web</p>
+
     <ul>
         <li><a href="https://www.google.com.br/" target="_blank">Google</a></li>
         <li><a href="https://www.spotify.com" target="_blank">Spotify</a></li>
         <li><a href="https://www.youtube.com/" target="_blank">Youtube</a></li>
     </ul>
 
-    <p>Top 3 dos melhores sites que existem na web</p>
-
     <p>Principais motivos para eu gostar deles</p>
+
+    <ul>
+        <li>Adiquirir conteúdo</li>
+        <li>Escutar música</li>
+        <li>Ver vídeos</li>
+    </ul>
 
   </body>
 
