--- a/fundamentos/secao-05-HTML-CSS/dia-2-biblioteca-JavaScript-framework-CSS/form.html
+++ b/fundamentos/secao-05-HTML-CSS/dia-2-biblioteca-JavaScript-framework-CSS/form.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario-TrybeTrip</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
     <style>
         body {
             font-family: fantasy;
@@ -26,8 +27,8 @@
   <body class="text-center">
     <h1>Concorra à Viagem dos seus sonhos com a TrybeTrip</h1>
 
-    <form>
-      <fieldset>
+    <form class="js-form" id="form">
+      <fieldset class="form-group">
         <label class="mb-3" for="fullName">Nome Completo:</label>
         <input type="text" id="fullName" name="fullName" placeholder="Digite seu nome completo" maxlength="40" minlength="10" required class="form-control">      
         <br/>
@@ -54,8 +55,8 @@
         <textarea class="form-control" name="why" id="why" cols="60" rows="10" placeholder="Digite sua resposta vencedora aqui"></textarea>
         <br/>
 
-        <label class="mb-3" for="date">Qual a melhor data para realizar sua viagem?</label>
-        <input class="form-control" type="date" id="date">
+        <label class="mb-3" for="datepicker">Qual a melhor data para realizar sua viagem?</label>
+        <input class="form-control" type="text" id="datepicker" data-validate-field="date">
         <br/>
 
         <label for="promo">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe.</label>
@@ -66,8 +67,15 @@
         <input class="form-check-input" type="checkbox" name="agreement" id="agreement" required>
       </fieldset>
 
-      <button class="btn btn-success" type="submit" id="submit-btn" disabled>Participar do concurso TrybeTrip</button>
-      <button class="btn btn-danger" type="button" id="clear-btn">Apagar informações</button>
+      <button class="btn btn-success submit-button" type="submit" id="submit-btn" disabled>Participar do concurso TrybeTrip</button>
+      <button class="btn btn-danger clear-button" type="button" id="clear-btn">Apagar informações</button>
     </form>
+
+    <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+    
+    <script>
+        var picker = new Pikaday({ field: document.getElementById('datepicker') });
+    </script>
+    
   </body>
 </html>
