--- a/fundamentos/secao-05-HTML-CSS/Projeto_travel_form/form.html
+++ b/fundamentos/secao-05-HTML-CSS/Projeto_travel_form/form.html
@@ -5,37 +5,39 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travel Form</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
+  <header class="header">
     <h1 id="title">Formulário Trybe Travel</h1>
   </header>
 
-  <form action="" id="main-form">
-    <fieldset>
+  <form action="" id="main-form" class="form">
+    <fieldset class="fieldset">
 
       <section>
-        <label for="fullName">Nome Completo:</label>
-        <input type="text" id="fullName" name="fullName" minlength="10" maxlength="40">
+        <label for="fullName" class="form-label">Nome Completo:</label>
+        <input type="text" class="form-control" id="fullName" name="fullName" minlength="10" maxlength="40">
 
-        <br><br>
+        <br>
 
-        <label for="email">E-mail:</label>
-        <input type="email" id="email" name="email" minlength="10" maxlength="50">
+        <label for="email" class="form-label">E-mail:</label>
+        <input type="email" class="form-control" id="email" name="email" minlength="10" maxlength="50">
       </section>
 
       <br>
 
-      <section>
+      <section class="destino">
         <p>Destino Preferido:</p>
-        <input type="radio" id="cidade" name="destinations">
-        <label for="cidade">Cidade</label>
-        <input type="radio" id="campo" name="destinations">
-        <label for="campo">Campo</label>
-        <input type="radio" id="praia" name="destinations">
-        <label for="praia">Praia</label>
-        <input type="radio" id="montanha" name="destinations">
-        <label for="montanha">Montanha</label>
+        <input type="radio" class="form-check-input" id="cidade" name="destinations">
+        <label for="cidade" class="form-check-label">Cidade</label>
+        <input type="radio" class="form-check-input" id="campo" name="destinations">
+        <label for="campo" class="form-check-label">Campo</label>
+        <input type="radio" class="form-check-input" id="praia" name="destinations">
+        <label for="praia" class="form-check-label">Praia</label>
+        <input type="radio" class="form-check-input" id="montanha" name="destinations">
+        <label for="montanha" class="form-check-label">Montanha</label>
 
       </section>
 
@@ -43,31 +45,31 @@
 
       <section>
         <p>Por que você deveria ser a pessoa desenvolvedora a ganhar o concurso TrybeTrip?</p>
-        <textarea name="question" id="question" cols="50" rows="10" maxlength="500" placeholder="Digite aqui sua resposta vencedora ..."></textarea>
+        <textarea name="question" class="form-control" id="question" cols="50" rows="10" maxlength="500" placeholder="Digite aqui sua resposta vencedora ..."></textarea>
       </section>
 
       <br>
 
-      <section>
+      <section class="date-align">
         <label for="date">Qual a melhor data para realizar sua viagem?</label>
-        <input type="date" id="date" name="date">
+        <input type="date" id="date" name="date" class="form-control date">
       </section>
 
       <br>
 
       <section>
-        <label for="promo">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
-        <input type="checkbox" id="promo" name="promo">
+        <label for="promo" class="form-check-label">Gostaria de receber outras incríveis oportunidades oferecidas pela Trybe?</label>
+        <input type="checkbox" class="form-check-input" id="promo" name="promo">
 
         <br><br>
 
-        <label for="agreement">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>
-        <input type="checkbox" id="agreement" name="agreement" required>
+        <label for="agreement" class="form-check-label">Concordo que imagens das minhas férias poderão ser usadas na divulgação de concursos futuros.</label>
+        <input type="checkbox" class="form-check-input" id="agreement" name="agreement" required>
       </section>
 
       <section>
-        <button type="submit" id="submit-btn">Enviar</button>
-        <button type="reset" id="clear-btn">Limpar</button>
+        <button type="submit" class="btn btn-success" id="submit-btn">Enviar</button>
+        <button type="reset" class="btn btn-danger" id="clear-btn">Limpar</button>
       </section>
 
     </fieldset>
