Adicionando atividades seção 4 dia 4

--- a/fundamentos/secao-04-JavaScripts-Dom-Eventos-WebStorage/dia-4-WebStorage/exercise.html
+++ b/fundamentos/secao-04-JavaScripts-Dom-Eventos-WebStorage/dia-4-WebStorage/exercise.html
@@ -5,6 +5,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="exercise.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Charm&display=swap" rel="stylesheet">
   <title>Change everything</title>
 </head>
 <body>
@@ -47,6 +50,7 @@
       <h2>Tipo da fonte</h2>
       <button>Arial</button>
       <button>Times New Roman</button>
+      <button>Medieval</button>
     </section>
   </header>
 
@@ -56,13 +60,13 @@
     <section class="hero">
       <h2>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</h2>
 
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.
-      </p>
+      <article class="hero-text">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam dictum sed nisi ac porta. Donec varius ligula et ipsum suscipit fermentum. Cras et felis sem. In fringilla ex et fermentum posuere. Phasellus egestas nunc dui, in facilisis magna euismod quis. Phasellus varius lacinia neque. Donec iaculis nibh urna, sit amet convallis ex sodales non. Nulla fringilla urna nibh.
+        </p>
+      </article>
     </section>
   </main>
 
-  <footer>
-    <p>Direitos reservados à AthNadu</p>
-  </footer>
+  <script src="exercise.js"></script>
 </body>
 </html>
